# my-python-utils

./: pyproject.toml
.github/workflows/: ci.yaml
data/: data_to_avro.py
my_python_utils/data/: pandas_utils.py
tests/my_python_utils/data/: pandas_utils_test.py
